prevent search results causing scrollbar popping in at top level

--- a/src/app/core/components/toolbar/toolbar.component.css
+++ b/src/app/core/components/toolbar/toolbar.component.css
@@ -100,6 +100,8 @@ i {
     -webkit-transition: 0.2s; /* Safari */
     transition: 0.2s;
     width: 100%;
+    overflow: auto;
+    max-height: calc(100vh - 64px);
 }
 
 .md-search__icon {
